# spbetu-dynamicsystems-coursework

./: CMakeLists.txt  README.md  main.cpp  spbetu-dynamicsystems-coursework.pro
gui/: canvas.cpp  canvas.h  displaysurface.cpp  displaysurface.h  mainwindow.cpp  mainwindow.h  plane.cpp  plane.h  scene.cpp  scene.h  scenemodifier.cpp  scenemodifier.h  sphere.cpp  sphere.h
logs/: ab3_0.001000_30000.txt  ab3_0.010000_3000.txt  ab3_0.100000_300.txt  ab3_0_001_10000it_error.txt  ab3_0_01_10000it_energy.txt  ab3_0_01_10000it_error.txt  ab3_0_1_10000it_energy.txt  ab3_0_1_10000it_error.txt  ab_0_001.txt  ab_0_01.txt  ab_0_1.txt  euler_0.001000_30000.txt  euler_0.010000_3000.txt  euler_0.100000_300.txt  euler_0_0001_10000it_energy.txt  euler_0_0001_10000it_error.txt  euler_0_001_10000it_energy.txt  euler_0_001_10000it_error.txt  euler_0_01_10000it_energy.txt  euler_0_01_10000it_error.txt  rk4_0.001000_30000.txt  rk4_0.010000_3000.txt  rk4_0.100000_300.txt  rk4_0_01_10000it_energy.txt  rk4_0_01_10000it_error.txt  rk4_0_1_10000it_energy.txt  rk4_0_1_10000it_error.txt
session/: session.cpp  session.h
solvers/: ab3.cpp  ab3.h  euler.cpp  euler.h  rk4.cpp  rk4.h  solver.cpp  solver.h
tests/: energyequilibrium.cpp  energyequilibrium.h  runner.cpp  runner.h  trajectory.cpp  trajectory.h
utils/: particle.cpp  particle.h  point3d.cpp  point3d.h  rhsfunction.cpp  rhsfunction.h  solver.cpp  solver.h  state.cpp  state.h
